[package]
name = "linker-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
rocksdb = "0.21.0"
tokio = { version = "1.32.0", features = ["full"] }
